fix: 🐛 truncate top-bar username to prevent overflow

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -356,8 +356,8 @@
 }
 
 .form-signup .form-input {
-  height: 44px;
-  font-size: 14px;
+  height: 36px;
+  font-size: 13px;
 }
 
 .form [type="submit"] {
